AER3-345 adding locale header in openapi yaml (#8)
* Explicitly stating language header in api yaml
Using components/parameters makes it a bit easier on the repetitive side of things, so using that for dataset as well.
The 'downside' of explicitly stating the header in the yaml is that it's now also a parameter in all our methods (automagically generated). So now using that to obtain a useable language in LocaleHelper.

* Getting rid of some code duplication
